<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <SwitchPreferenceCompat
            app:key="message_to_server"
            android:defaultValue="true"
            app:title="@string/send_to_server"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="message_from_server"
            android:defaultValue="true"
            app:title="@string/send_from_server"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="auto_resend"
            android:defaultValue="true"
            app:title="@string/send_after_connect"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/auto_reply_header">

        <SwitchPreferenceCompat
            app:key="auto_reply_enable"
            app:title="@string/auto_reply_enable_title" />

        <ListPreference
            app:defaultValue="reply_no_server"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="1"
            android:entries="@array/reply_entries"
            android:entryValues="@array/reply_values"
            android:key="reply_rule"
            android:title="Reply Rule" />

        <EditTextPreference
            app:useSimpleSummaryProvider="true"
            android:defaultValue=""
            android:key="auto_reply_message"
            android:selectAllOnFocus="true"
            android:title="@string/auto_reply_message_title" />
    </PreferenceCategory>

</PreferenceScreen>